// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/index/Index renders a loading indicator 1`] = `
<div
  className="root"
>
  <div
    className="root"
  >
    Loading...
  </div>
</div>
`;

exports[`components/index/Index renders a quote 1`] = `
<div
  className="root"
>
  <p>
    A quote
  </p>
</div>
`;

exports[`components/index/Index renders an error 1`] = `
<div
  className="root"
>
  <div
    className="root"
  >
    An error
  </div>
</div>
`;
